--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -34,7 +34,7 @@
 
 .container {
   position: relative;
-  z-index: 1;
+  z-index: 5;
   height: 100vh;
   width: 50vw;
   display: flex;
@@ -139,63 +139,44 @@
   align-items: flex-start;
   justify-content: flex-start;
   padding-top: 5vh;
-  width: 50vw;
+  width: 70vw;
+  margin-right: -20vw;
   flex: 1;
+  z-index: 10;
 }
 
 .screenshotContainer {
-  width: 150%;
+  width: 100%;
   height: 90vh;
   position: relative;
   transform: translateX(0);
   overflow: visible;
+  z-index: 20;
+  padding: 60px;
+  margin: -60px;
 }
 
 .safariScreenshot,
 .appScreenshot {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: left top;
+  top: 60px;
+  left: 60px;
+  width: calc(100% - 120px);
+  height: calc(100% - 120px);
+  object-fit: contain;
+  object-position: center center;
 }
 
 .safariScreenshot {
-  z-index: 1;
+  z-index: 21;
   filter: drop-shadow(0 50px 100px rgba(0, 0, 0, 0.4));
 }
 
 .appScreenshot {
-  z-index: 2;
-  opacity: 0;
-  animation: slideInFromBottomRight 4s ease-in-out infinite;
+  z-index: 22;
   filter: drop-shadow(0 30px 60px rgba(0, 0, 0, 0.3));
   padding-top: 16px;
-}
-
-@keyframes slideInFromBottomRight {
-  0% {
-    opacity: 0;
-    transform: translate(20%, 20%);
-  }
-  25% {
-    opacity: 0;
-    transform: translate(20%, 20%);
-  }
-  50% {
-    opacity: 0.7;
-    transform: translate(0, 0);
-  }
-  75% {
-    opacity: 0.7;
-    transform: translate(0, 0);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(20%, 20%);
-  }
+  box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
