--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -183,10 +183,13 @@
   .hero {
     min-height: auto;
     padding: 60px 0;
+    flex-direction: column;
   }
 
   .container {
     height: auto;
+    width: 100%;
+    padding: 0 20px;
   }
 
   .content {
@@ -200,6 +203,10 @@
     text-align: center;
   }
 
+  .buttons {
+    justify-content: center;
+  }
+
   .title {
     font-size: 2.5rem;
   }
@@ -210,7 +217,10 @@
 
   .imageSection {
     height: 60vh;
+    width: 100%;
+    margin-right: 0;
     justify-content: center;
+    padding-top: 0;
   }
 
   .screenshotContainer {
